Floko: OmniSwitch Recent improvements
* Add information for recents setting.
  We can only customize if 3-button navigation.
* Comment out AOSP recents category.
  (AOSP recent needs SystemUIWithLegacyRecents)
* Remove unnecessary restart toast.

Signed-off-by: koron393 <koron393@gmail.com>
Change-Id: I4ecb03f08a05dc0ae6777aa3c84b98462bcc64d4

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -2087,6 +2087,8 @@
     <string name="recents_style_aosp">AOSP</string>
     <string name="recents_style_omni">OmniSwitch</string>
     <string name="device_restart_required">Restart your device to apply changes</string>
+    <string name="recents_information">Abour recents style</string>
+    <string name="recents_information_summary">Customize the recents style when 3-button navigation</string>
 
     <!-- Custom seekbar -->
     <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
