--- a/res/values-ja-rJP/cr_strings.xml
+++ b/res/values-ja-rJP/cr_strings.xml
@@ -118,6 +118,8 @@
     <string name="omniswitch_start_settings_summary">OmniSwitch の設定を開きます</string>
     <string name="omniswitch_first_time_title">OmniSwitch</string>
     <string name="omniswitch_first_time_message">OmniSwitch の設定を開いて、OmniSwitch を有効化していることを確認してください。</string>
+    <string name="recents_information">アプリ履歴について</string>
+    <string name="recents_information_summary">3 ボタンナビゲーションのときのアプリ履歴表示を変更できます</string>
     <!-- Lockscreen categories -->
     <string name="lockscreen_shortcuts_category">ショートカット</string>
     <string name="lockscreen_interface_category">インターフェース</string>
