--- a/res/xml/crdroid_settings_recents.xml
+++ b/res/xml/crdroid_settings_recents.xml
@@ -18,6 +18,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <Preference
+        android:key="recents_info"
+        android:title="@string/recents_information"
+        android:summary="@string/recents_information_summary" />
+
     <com.crdroid.settings.preferences.SystemSettingListPreference
         android:key="recents_component"
         android:icon="@drawable/ic_recents"
@@ -33,11 +38,11 @@
         android:title="@string/recents_icon_pack_title"
         android:summary="@string/recents_icon_pack_summary" />
 
-    <PreferenceCategory 
+    <!--PreferenceCategory
         android:key="stock_recents"
         android:title="@string/recents_default_category">
 
-        <!--<ListPreference
+        <ListPreference
             android:key="immersive_recents"
             android:icon="@drawable/ic_recents"
             android:title="@string/immersive_recents_title"
@@ -55,7 +60,7 @@
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.crdroid.settings.fragments.HAFRAppListActivity" />
-        </PreferenceScreen>-->
+        </PreferenceScreen>
 
         <com.crdroid.settings.preferences.SystemSettingSwitchPreference
             android:key="systemui_recents_mem_display"
@@ -64,7 +69,7 @@
             android:summary="@string/systemui_recents_mem_display_summary"
             android:defaultValue="false" />
 
-        <!--<com.crdroid.settings.preferences.ColorPickerPreference
+        <com.crdroid.settings.preferences.ColorPickerPreference
             android:key="systemui_recents_mem_barcolor"
             android:icon="@drawable/ic_memory"
             android:title="@string/systemui_recents_mem_display_color"
@@ -78,7 +83,7 @@
             android:title="@string/systemui_recents_mem_display_text_color"
             android:defaultValue="#00ffffff"
             android:dependency="systemui_recents_mem_display"
-            alphaSlider="true" />-->
+            alphaSlider="true" />
 
         <com.crdroid.settings.preferences.SystemSettingSwitchPreference
             android:key="show_clear_all_recents"
@@ -96,7 +101,7 @@
             android:defaultValue="3"
             android:dependency="show_clear_all_recents" />
 
-        <!--<com.crdroid.settings.preferences.SystemSettingSwitchPreference
+        <com.crdroid.settings.preferences.SystemSettingSwitchPreference
             android:key="recents_dismiss_icon"
             android:icon="@drawable/ic_dismiss"
             android:title="@string/recents_dismiss_icon_title"
@@ -122,10 +127,10 @@
             android:key="recents_use_grid"
             android:icon="@drawable/ic_grid_view"
             android:title="@string/recents_use_grid_title"
-            android:summary="@string/recents_use_grid_summary" />-->
+            android:summary="@string/recents_use_grid_summary" />
     </PreferenceCategory>
 
-    <!--<PreferenceCategory 
+    <PreferenceCategory
         android:title="@string/recents_omni_category">
 
         <SwitchPreference
@@ -180,4 +185,5 @@
                 android:targetClass="org.omnirom.omniswitch.SettingsActivity" />
         </Preference>
     </PreferenceCategory>
+
 </PreferenceScreen>
